@@ -32,6 +32,7 @@ Sync {
 	Multicast {
 		IPv4_address 225.0.0.50
 		IPv4_interface 192.168.100.100 # IP of dedicated link
+		Interface eth2
 		Group 3780
 	}
 
