@@ -37,6 +37,7 @@ Sync {
 	Multicast {
 		IPv4_address 225.0.0.50
 		IPv4_interface 192.168.100.200 # IP of dedicated link
+		Interface eth2
 		Group 3780
 	}
 
